# excel-password-cracker-client

./: .gitignore  CONTRIBUTING.md  PRODUCT_INTRO.md  README.md  SECURITY.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/hashcat/macos-arm64/hashcat-dist/share/hashcat/sessions/: epcc_session.restore
src-tauri/src/: commands.rs  hash.rs  lib.rs  process.rs  state.rs
