[package]
name = "excel-password-cracker-client"
version = "0.1.0"
description = "Excel Password Cracker Client - A cross-platform Excel password cracking desktop application"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
repository = "https://github.com/Jayden-X-L/excel-password-cracker-client"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
zip = "0.6"
